<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/group_dialog_style"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/group_name_upgrade"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/dialog_text_style"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/group_default_name"
        android:inputType="text"
        android:id="@+id/group_name_upgrade_edit_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/cancel_upgrade_group_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#CFCFCF" />

        <TextView
            android:id="@+id/confirm_upgrade_group_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>