<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="horizontal"
    android:background="@color/gray">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/tab_equipment">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/pic_equipment"
            android:layout_gravity="center"
            android:background="@drawable/equipment_pic"></ImageView>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_equipment"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/text_equipment"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/tab_group">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/pic_group"
            android:layout_gravity="center"
            android:background="@drawable/group_pic"></ImageView>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_group"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/text_group"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/tab_schedule">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/pic_schedule"
            android:layout_gravity="center"
            android:background="@drawable/scheduled_pic"></ImageView>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_schedule"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/text_schedule"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/tab_user">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/pic_user"
            android:layout_gravity="center"
            android:background="@drawable/user_pic"></ImageView>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_user"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/text_user"/>
    </LinearLayout>

</LinearLayout>