<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_user"
                android:textStyle="bold"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/welcome_user"
                android:textSize="30sp"
                android:gravity="left"
                android:textColor="@color/red"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/upgrade_password"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/upgrade_password"
                android:gravity="left"
                android:textSize="30sp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/next_step"
                android:layout_gravity="right"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedule_monitor"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/schedule_monitor"
                android:gravity="left"
                android:textSize="30sp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/next_step"
                android:layout_gravity="right"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/node_control"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/node_control"
                android:gravity="left"
                android:textSize="30sp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/next_step"
                android:layout_gravity="right"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>